# cubic-splinterpol

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  plot.rs  plot_spline.rs  thomas_algorithm.rs
